# lua_games

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/script/: game_of_life.lua
source/script/common/: map.lua  path.lua
source/script/game_of_life/: game_of_life.lua  gospers_gun.lua  help.lua  life_map.lua  main.lua  map.lua  program_options.lua
source/script/game_of_life/data/: square.lua
source/script/path_finder/: main.lua  path.lua
source/script/path_finder/data/: map.lua
source/script/snake/: main.lua
source/timer/: CMakeLists.txt
source/timer/include/: timer.h
source/timer/source/: timer.cpp
test/: CMakeLists.txt
test/common/: test_map.lua  test_path.lua
test/common/data/: rectangle.lua
test/game_of_life/: test_life_map.lua  test_map.lua  test_program_options.lua
test/path_finder/: test_path.lua
